<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerHorizontal="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shirley.myapplication5.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/tvProName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:includeFontPadding="true"
        android:text="@string/project_name"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:targetApi="lollipop"
       android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <ImageView
        android:id="@+id/imgmainscreen"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:scaleType="center"
        app:srcCompat="@drawable/pic"
        android:layout_below="@+id/tvProName"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnCurrentLoction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgmainscreen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="findCurrentLoction"
        android:text="@string/button_goto_CurrentLoction" />

    <Button
        android:id="@+id/btnSearchAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCurrentLoction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="searchAddress"
        android:text="@string/button_goto_SearchAddress" />

    <Button
        android:id="@+id/btnBuildingTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSearchAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="buildTrack"
        android:text="@string/button_goto_BuildingRunningTrack" />


</RelativeLayout>
