<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shirley.myapplication5.SearchAddress">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/etfindaddress"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:hint="@string/Search" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="Search"
            android:id="@+id/Bsearch"
            android:layout_gravity="right"
            android:onClick="onSearch" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/mapFragment1"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="382dp"
            android:layout_height="387dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnGotoScreen1"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:onClick="gotoScreen1"
            android:text="@string/button_goto_screen_1" />

        <Button
            android:id="@+id/btnGotoCurrentLoction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gotoCurrentLoction"
            android:text="@string/button_goto_CurrentLoction" />
        >

    </LinearLayout>





</LinearLayout>

